--- a/translations/kangyur/translations/094-005_toh728-the_hundred_and_eight_names_of_the_goddess_tara.xml
+++ b/translations/kangyur/translations/094-005_toh728-the_hundred_and_eight_names_of_the_goddess_tara.xml
@@ -33,7 +33,7 @@
         <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.2 <date>2022</date>
+                <edition>v 1.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -67,7 +67,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-11-04T14:30:04.459Z" user="admin">04/11/2022 14:30:04</note>
+        <note type="lastUpdated" date-time="2022-11-28T23:41:30.439Z" user="admin">28/11/2022 23:41:30</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:56:38.631Z" user="john">v 0.1.0</note>
         <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:56:38.631Z" user="john">3</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-05-28T13:10:21.844Z" user="line-tofte">2.h</note>
@@ -105,6 +105,7 @@
           <note type="updated" update="text-version" value="1.0.0" date-time="2022-10-13T11:30:46.187Z" user="martina-cotter">First published version</note>
           <note type="updated" update="text-version" value="1.0.1" date-time="2022-10-26T20:07:13.788Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>
           <note type="updated" update="text-version" value="1.0.2" date-time="2022-11-04T14:30:01.633Z" user="celso">Update "Samye Translations and Publications" to "Samye Translations"</note>
+          <note type="updated" update="text-version" value="1.0.3" date-time="2022-11-28T23:41:27.665Z" user="konchog">Various fixes throughout the sections, documented in email exchange.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -232,11 +233,9 @@
             <l>Upon hearing this great mantra,</l>
             <l>Supremely renowned in the three realms,</l>
             <l>The assemblies of gods and asuras,</l>
-            <l>Together with the hordes of <foreign xml:lang="Sa-Ltn" type="term">rākṣasas</foreign>, </l>
-            <l>
-                            <foreign xml:lang="Sa-Ltn" type="term">Yakṣas</foreign>, <foreign xml:lang="Sa-Ltn" type="term">kinnaras</foreign>, <foreign xml:lang="Sa-Ltn" type="term">mahoragas</foreign>,</l>
-            <l>
-                            <foreign xml:lang="Sa-Ltn" type="term">Bhūtas</foreign>, <foreign xml:lang="Sa-Ltn" type="term">gandharvas</foreign>, and <foreign xml:lang="Sa-Ltn" type="term">vināyakas</foreign>,</l>
+            <l>Together with the hordes of rākṣasas, </l>
+            <l>Yakṣas, kinnaras, mahoragas,</l>
+            <l>Bhūtas, gandharvas, and vināyakas,</l>
             <l>Grew afraid and hung their heads low.</l>
             <l>With their mighty arms trembling, they said:</l>
           </lg>
@@ -250,7 +249,7 @@
           <milestone unit="chunk" xml:id="UT22084-094-005-22"/>
           <lg tid="23">
             <l>“Proclaimer of Avalokiteśvara’s lineage,</l>
-            <l>Light renowned for its greatness, oh broad-eyed one, </l>
+            <l>Light renowned for its greatness, O broad-eyed one, </l>
             <l>You came into being to help sentient beings!”</l>
           </lg>
           <milestone unit="chunk" xml:id="UT22084-094-005-23"/>
@@ -319,13 +318,13 @@
           </lg>
           <milestone unit="chunk" xml:id="UT22084-094-005-33"/>
           <lg tid="31">
-            <l>“Holder of the vajra of resplendent clarity which tames beings,</l>
+            <l>“Holder of the vajra of resplendent clarity that tames beings,</l>
             <l>Utterly victorious clear light,</l>
             <l>You are awake, beyond taint or stain,</l>
             <l>And you are honored<note place="end" xml:id="UT22084-094-005-34"> Narthang, Lhasa,
                 and Stok Palace read <foreign xml:lang="Bo-Ltn" type="term">rje</foreign> (“lord”)
                 instead of <foreign xml:lang="Bo-Ltn" type="term">rjed</foreign> (“to honor, to
-                respect”), which makes: “Lord over Candra and the outstanding gods.”</note> by
+                respect”), which makes “Lord over Candra and the outstanding gods.”</note> by
               Candra and the outstanding gods.</l>
           </lg>
           <milestone unit="chunk" xml:id="UT22084-094-005-35"/>
@@ -365,7 +364,7 @@
             <l>Holding a garland, you bring elation,</l>
             <l>Grant exhilaration,<note place="end" xml:id="UT22084-094-005-42"> In Tibetan the word
                   <foreign xml:lang="Bo-Ltn" type="term">rgyags</foreign>, whose meaning ranges from
-                “exhilaration” to “vanity”, is repeated twice in close succession. Here it is
+                “exhilaration” to “vanity,” is repeated twice in close succession. Here it is
                 translated as “elation” and “exhilaration” to avoid the repetition.</note> and
               remove all conceit.</l>
           </lg>
@@ -392,7 +391,7 @@
           <lg tid="38">
             <l>“Blissful<note place="end" xml:id="UT22084-094-005-47">Reading <foreign xml:lang="Bo-Ltn" type="term">bde ma</foreign> as attested in Narthang and Stok
                 Palace. Degé reads <foreign xml:lang="Bo-Ltn" type="term">bde ba</foreign>.</note>
-              stepping stone to happiness,</l>
+              steppingstone to happiness,</l>
             <l>You remove all that stands in the way of good fortune.</l>
             <l>You make wealth increase and merit ever-victorious. </l>
             <l>You gleam like gold and silver from the Jambu River. </l>
@@ -423,8 +422,8 @@
             <l>“You wear armlets, earrings, and bracelets</l>
             <l>And are wreathed in glimmering crystal necklaces.</l>
             <l>Lady with a face of beauty, wearing a superb sash,</l>
-            <l>You are accompanied by the one who holds a sprig of neem leaves.<note place="end" xml:id="UT22084-094-005-52">Reference unclear. Could also be read as “You hold a
-                [sprig of] neem leaves as your companion.”</note>
+            <l>You are accompanied by the one who holds a sprig of neem leaves.<note place="end" xml:id="UT22084-094-005-52">Reference unclear. Could also be read as “You hold [a
+                sprig of] neem leaves as your companion.”</note>
             </l>
           </lg>
           <milestone unit="chunk" xml:id="UT22084-094-005-53"/>
@@ -460,8 +459,8 @@
           <milestone unit="chunk" xml:id="UT22084-094-005-59"/>
           <lg tid="46">
             <l>“Wrathful one with a topknot and diadem, victorious one, </l>
-            <l>You are Brahmā himself and have speech the likes of Brahmā.</l>
-            <l>Your beautiful voice rings like the call of the kalaviṅka.<note place="end" xml:id="UT22084-094-005-60">Tentatively reading <foreign xml:lang="Bo-Ltn" type="term">ping ka</foreign> as an abbreviation for <foreign xml:lang="Bo-Ltn" type="term">ka la ping ka</foreign> (Skt. <foreign xml:lang="Sa-Ltn" type="term">kalaviṅka</foreign>), the Kalaviṅka bird.</note>
+            <l>You are Brahmā and have the speech of Brahmā.</l>
+            <l>Your beautiful voice rings like the call of the kalaviṅka.<note place="end" xml:id="UT22084-094-005-60">Tentatively reading <foreign xml:lang="Bo-Ltn" type="term">ping ka</foreign> as an abbreviation for <foreign xml:lang="Bo-Ltn" type="term">ka la ping ka</foreign> (Skt. <foreign xml:lang="Sa-Ltn" type="term">kalaviṅka</foreign>), the kalaviṅka bird.</note>
                         </l>
             <l>Sovereign of the world, you are born within the supreme family!</l>
           </lg>
@@ -470,7 +469,7 @@
             <l>“Fierce lady adorned with the resplendence of jewels</l>
             <l>And holding a staff with adamantine leaves,</l>
             <l>Your immaculate earrings sway as you move.</l>
-            <l>Such is how you dawn in the minds of those in Yama’s realm.<note place="end" xml:id="UT22084-094-005-62"> Translation Tentative.</note>
+            <l>Such is how you dawn in the minds of those in Yama’s realm.<note place="end" xml:id="UT22084-094-005-62"> Translation tentative.</note>
                         </l>
           </lg>
           <milestone unit="chunk" xml:id="UT22084-094-005-63"/>
@@ -487,13 +486,13 @@
           <milestone unit="chunk" xml:id="UT22084-094-005-65"/>
           <lg tid="49">
             <l>“You are crafty and full of art,</l>
-            <l>And your voice resounds mightily</l>
+            <l>And your voice resounds mightily,</l>
             <l>Like a bouquet of campaka flowers</l>
             <l>Brightens a courtyard or hall from above.<note place="end" xml:id="UT22084-094-005-66"> The reading of this verse is quite tentative. In the
                 Tibetan, the relationships between Tārā’s skill and voice, a courtyard or (banquet)
-                hall, and being illuminated by a bouquet of <foreign xml:lang="Sa-Ltn" type="term">campaka</foreign> flowers, are not made explicit. We read <foreign xml:lang="Bo-Ltn" type="term">khyams dang khyams bza’</foreign> (courtyard and
-                hall) with the Narthang Kangyur, where Degé has the repetition <foreign xml:lang="Bo-Ltn" type="term">khyams dang khyams bzang</foreign> (courtyard and
-                excellent courtyard).</note>
+                hall, and being illuminated by a bouquet of campaka flowers, are not made explicit. We read <foreign xml:lang="Bo-Ltn" type="term">khyams dang khyams bza’</foreign> (“courtyard and
+              hall”) with the Narthang Kangyur, where Degé has the repetition <foreign xml:lang="Bo-Ltn" type="term">khyams dang khyams bzang</foreign> (“courtyard and
+              excellent courtyard”).</note>
                         </l>
           </lg>
           <milestone unit="chunk" xml:id="UT22084-094-005-67"/>
@@ -531,7 +530,7 @@
             <l>“Lady of gladness, you delight all who associate with you</l>
             <l>And you delight in those who delight in wholesome conduct.</l>
             <l>Delightful lady who exudes delight,</l>
-            <l>You are an excellent support for all qualities.<note place="end" xml:id="UT22084-094-005-74"> “Qualities” here translates the Tibetan word <foreign xml:lang="Bo-Ltn" type="term">chos</foreign>, Skt. <foreign xml:lang="Sa-Ltn" type="term">dharma</foreign>, with a wide range of meanings.</note>
+            <l>You are an excellent support for all qualities.<note place="end" xml:id="UT22084-094-005-74"> “Qualities” here translates the Tibetan word <foreign xml:lang="Bo-Ltn" type="term">chos</foreign>, Skt. <foreign xml:lang="Sa-Ltn" type="term">dharma</foreign>, which has a wide range of meanings.</note>
             </l>
           </lg>
           <milestone unit="chunk" xml:id="UT22084-094-005-75"/>
@@ -559,9 +558,9 @@
           <milestone unit="chunk" xml:id="UT22084-094-005-79"/>
           <lg tid="57">
             <l>“Charming lady who holds a vajra in her hand</l>
-            <l>And wields a vajra lasso and excellent lasso,</l>
+            <l>And wields a vajra lasso, an excellent lasso,</l>
             <l>You are captivating; you bring satisfaction to the mind,</l>
-            <l>And you dispel all opponents and obstacle-makers.</l>
+            <l>And you dispel all opponents and obstacle makers.</l>
           </lg>
           <milestone unit="chunk" xml:id="UT22084-094-005-80"/>
           <lg tid="58">
@@ -591,7 +590,7 @@
           <milestone unit="chunk" xml:id="UT22084-094-005-85"/>
           <lg tid="61">
             <l>Then, the magnificent goddess Tārā,</l>
-            <l>Who is like the light of the moon,</l>
+            <l>Who is like the light of the moon</l>
             <l>And blazes with radiance,</l>
             <l>Revealed a smile and spoke:</l>
           </lg>
@@ -643,12 +642,12 @@
             <l>“Whoever upholds this sublime, indestructible dhāraṇī-mantra,</l>
             <l>Which quells all afflictions,</l>
             <l>Eliminates all negativity,</l>
-            <l>And nurtures all beings;<note place="end" xml:id="UT22084-094-005-92"> Meaning
+            <l>And nurtures all beings—<note place="end" xml:id="UT22084-094-005-92"> Meaning
                 unclear. Here, the Tib. term <foreign xml:lang="Bo-Ltn" type="term">rab ’byed
                   pa</foreign> is understood to align with the Skt. term <foreign xml:lang="Sa-Ltn" type="term">prabhāvana</foreign>. </note>
                         </l>
             <l>Whoever, in meditative equipoise,</l>
-            <l>Hears it, reads it, or keeps it in mind,</l>
+            <l>Hears it, reads it, or keeps it in mind—</l>
             <l>Will accomplish all their aims</l>
             <l>As was stated by the Self-Arisen One. </l>
           </lg>
@@ -671,10 +670,9 @@
           </lg>
           <milestone unit="chunk" xml:id="UT22084-094-005-95"/>
           <lg tid="70">
-            <l>“This praise known as <title xml:lang="en">The Hundred and Eight Names of the
-                Goddess Tārā with a Lovely Face</title>
-                        </l>
-            <l>Fills the many worlds, </l>
+            <l>“This praise, known as <title xml:lang="en">The Hundred and Eight Names of the
+                Goddess Tārā with a Lovely Face</title>,</l>
+            <l>Fills the many worlds </l>
             <l>And dispels all afflictions and everything untoward!</l>
           </lg>
           <milestone unit="chunk" xml:id="UT22084-094-005-96"/>
@@ -726,16 +724,15 @@
           <bibl xml:id="UT22084-094-005-102">
                         <title xml:lang="Bo-Ltn">lha mo sgrol ma’i mtshan brgya
             rtsa brgyad pa</title> (<title xml:lang="Sa-Ltn">Tāra­devī­nāmāṣṭaśataka</title>). Toh
-            728, Degé Kangyur vol. 94 (rgyud, tsha), folios 219.a–222.a. Page numbers in brackets
+            728, Degé Kangyur vol. 94 (rgyud, tsha), folios 219.a–222.a. Folio numbers in brackets
             refer to this edition.</bibl>
           <bibl xml:id="UT22084-094-005-103">
                         <title xml:lang="Bo-Ltn">lha mo sgrol ma’i mtshan brgya
               rtsa brgyad pa</title>. bka’ ’gyur (dpe bsdur ma) [Comparative Edition of the
             Kangyur], krung go’i bod rig pa zhib ’jug ste gnas kyi bka’ bstan dpe sdur khang (The
             Tibetan Tripitaka Collation Bureau of the China Tibetology Research Center). 108
-            volumes. </bibl>
-          <bibl xml:id="UT22084-094-005-104">Beijing: krung go’i bod rig pa dpe skrun khang (China
-            Tibetology Publishing House), 2006–2009, vol. 94 pp. 582–91.</bibl>
+            volumes. Beijing: krung go’i bod rig pa dpe skrun khang (China
+            Tibetology Publishing House), 2006–9, vol. 94 pp. 582–91.</bibl>
           <bibl xml:id="UT22084-094-005-105">
                         <title xml:lang="Bo-Ltn">lha mo sgrol ma’i mtshan brgya
               rtsa brgyad pa</title>. Stok Palace (stog pho brang) Kangyur vol. 107 (rgyud, ma),
@@ -810,7 +807,7 @@
               <term status="verified" xml:lang="Bo-Ltn">lto ’phye chen po </term>
               <term xml:lang="bo">ལྟོ་འཕྱེ་ཆེན་པོ།</term>
               <term xml:lang="Sa-Ltn">mahoraga</term>
-              <term type="definition">Literally “large serpent.” A subterranean, semi-divine being
+              <term type="definition">Literally “large serpent.” A subterranean, semidivine being
                 that takes the form of a large serpent, sometimes with a human torso and
                 head.</term>
             </gloss>
@@ -861,7 +858,7 @@
               <term status="verified" xml:lang="Bo-Ltn">rig sngags ’chang </term>
               <term xml:lang="bo">རིག་སྔགས་འཆང་།</term>
               <term xml:lang="Sa-Ltn">vidyādhara</term>
-              <term type="definition">A class of semi-divine being that is famous for wielding
+              <term type="definition">A class of semidivine being that is famous for wielding
                   (<foreign xml:lang="Sa-Ltn" type="term">dhara</foreign>) spells (<foreign xml:lang="Sa-Ltn" type="term">vidyā</foreign>). Loosely understood as “sorcerers,”
                 these magical beings are frequently petitioned through dhāraṇī and Kriyātantra
                 ritual to grant magical powers to the supplicant. The later Buddhist tradition,
@@ -1068,7 +1065,7 @@
               <term status="verified" xml:lang="Bo-Ltn">sgrol ma </term>
               <term xml:lang="bo">སྒྲོལ་མ།</term>
               <term xml:lang="Sa-Ltn">Tārā</term>
-              <term type="definition">A goddess (lit. “Savior”) known for giving protection. She is
+              <term type="definition">Lit. “Savior.” Though often described as a goddess known for giving protection, she is
                 variously presented in Buddhist literature as a great bodhisattva or a fully
                 awakened buddha.</term>
             </gloss>
