--- a/translations/kangyur/placeholders/049-004_toh109-the_sutra_on_the_mountain_gayasirsa.xml
+++ b/translations/kangyur/placeholders/049-004_toh109-the_sutra_on_the_mountain_gayasirsa.xml
@@ -19,9 +19,10 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
                 <editor role="copyEditor" ref="eft:person-66">Joseph McClellan</editor>
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
+                <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.8 <date>2019</date>
+                <edition>v 0.1.9 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -41,7 +42,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-14T08:17:06.93Z" user="admin">14/09/2022 08:17:06</note>
+                <note type="lastUpdated" date-time="2022-11-29T13:46:11.608Z" user="admin">29/11/2022 13:46:11</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-08T07:42:51.906Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:10:59.245Z" user="mike">2.f</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2020-10-12T08:30:54.373Z" user="line-tofte">Auto (update-contributors)</note>
@@ -55,6 +56,7 @@
                 <note type="updated" update="text-version" value="0.1.7" date-time="2022-07-14T11:00:21.472Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2022-09-14T08:17:00.824Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.1.8" date-time="2022-09-14T08:17:00.824Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.9" date-time="2022-11-29T13:46:10.139Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
