--- a/translations/tengyur/placeholders/003-001_toh1183-yogaratnamalanamahevajrapanjika.xml
+++ b/translations/tengyur/placeholders/003-001_toh1183-yogaratnamalanamahevajrapanjika.xml
@@ -14,10 +14,10 @@
                 <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2020</date>
+                <edition>v 0.0.8 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT23703-003-001"/>
                 <date/>
             </publicationStmt>
@@ -37,7 +37,7 @@
                 <link type="isCommentaryOf" target="toh417"/>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-04T13:50:28.27Z" user="admin">04/11/2022 13:50:28</note>
+                <note type="lastUpdated" date-time="2022-11-30T11:02:47.656Z" user="admin">30/11/2022 11:02:47</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-21T09:54:52.67Z" user="andreas">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-02-21T09:54:52.67Z" user="andreas">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-02-17T10:42:02.182Z" user="line-tofte">2.h</note>
@@ -52,6 +52,8 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-09-14T08:23:54.742Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="title" date-time="2022-11-04T13:50:24.047Z" user="john">An alternative Tibetan translation by Gö Khukpa Lhätse ('gos khug pa lhas btsas) is to be found in the Narthang and Kanxi Kangyurs.</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2022-11-04T13:50:24.047Z" user="john">Auto (update-titles)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-11-30T11:02:42.13Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2022-11-30T11:02:42.13Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
