--- a/translations/kangyur/placeholders/072-029_toh329-the_sutra_of_the_god.xml
+++ b/translations/kangyur/placeholders/072-029_toh329-the_sutra_of_the_god.xml
@@ -10,11 +10,11 @@
                 <author role="translatorMain" ref="contributors.xml#team-27"/>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-072-029"/>
                 <date/>
             </publicationStmt>
@@ -30,9 +30,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T13:00:36.967Z" user="admin">20/12/2019 13:00:36</note>
+                <note type="lastUpdated" date-time="2022-11-30T13:37:12.456Z" user="admin">30/11/2022 13:37:12</note>
             
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-11-30T13:37:06.887Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-30T13:37:06.887Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
