--- a/translations/kangyur/placeholders/072-029_toh329-the_sutra_of_the_god.xml
+++ b/translations/kangyur/placeholders/072-029_toh329-the_sutra_of_the_god.xml
@@ -4,13 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">lha'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">devatāsūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the God</title>
-                <author role="translatorMain" ref="contributors.xml#team-27"/>
+                <title type="mainTitle" xml:lang="Sa-Ltn">devatāsūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">lha'i mdo/</title>
+                <author role="translatorMain" ref="eft:team-27"/>
+                <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</consultant>
+                <author role="translatorEng" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</author>
+                <consultant role="projectManager" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -30,9 +34,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-30T13:37:12.456Z" user="admin">30/11/2022 13:37:12</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-11-30T13:37:06.887Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-30T13:37:06.887Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-11-30T13:38:24.861Z" user="admin">30/11/2022 13:38:24</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-11-30T13:37:06.887Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-30T13:37:06.887Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-30T13:38:19.316Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
