--- a/translations/kangyur/placeholders/062-014_toh214-the_sutra_of_advice_for_the_king_1.xml
+++ b/translations/kangyur/placeholders/062-014_toh214-the_sutra_of_advice_for_the_king_1.xml
@@ -4,15 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rgyal po la gdams pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">rājādeśasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of Advice for the King [1]</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">rgyal po la gdams pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">rājādeśasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rgyal po la gdams pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">rājādeśanāmamahāyānasūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-27"/>
+                <title type="otherTitle" xml:lang="Bo-Ltn">rgyal po la gdams pa zhes bya ba theg pa chen po'i mdo</title>
+                <author role="translatorMain" ref="eft:team-27"/>
+                <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</consultant>
+                <author role="translatorEng" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</author>
+                <consultant role="projectManager" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -32,9 +36,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-30T13:44:17.331Z" user="admin">30/11/2022 13:44:17</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-11-30T13:44:11.773Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-30T13:44:11.773Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-11-30T13:45:52.026Z" user="admin">30/11/2022 13:45:52</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-11-30T13:44:11.773Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-30T13:44:11.773Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-30T13:45:46.473Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
