--- a/translations/kangyur/placeholders/056-005_toh137-the_supreme_samadhi.xml
+++ b/translations/kangyur/placeholders/056-005_toh137-the_supreme_samadhi.xml
@@ -4,15 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">ting nge 'dzin mchog dam pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">samādhyagrottama</title>
                 <title type="mainTitle" xml:lang="en">The Supreme Samādhi</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa ting nge 'dzin mchog dam pa</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">samādhyagrottama</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">ting nge 'dzin mchog dam pa/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasamādhyagrottama</title>
-                <author role="translatorMain" ref="contributors.xml#team-27"/>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa ting nge 'dzin mchog dam pa</title>
+                <author role="translatorMain" ref="eft:team-27"/>
+                <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</consultant>
+                <author role="translatorEng" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</author>
+                <consultant role="projectManager" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -32,9 +36,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-30T13:51:58.303Z" user="admin">30/11/2022 13:51:58</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-11-30T13:51:52.758Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-30T13:51:52.758Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-11-30T13:52:41.798Z" user="admin">30/11/2022 13:52:41</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-11-30T13:51:52.758Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-30T13:51:52.758Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-30T13:52:36.244Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
